--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "zone.js": "0.6.21"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "^0.0.36",
-    "typescript": "^2.0.3"
+    "@ionic/app-scripts": "0.0.36",
+    "typescript": "2.0.3"
   },
   "description": "dhis-2-touch: An Ionic project",
   "cordovaPlugins": [
