--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@ionic/storage": "1.0.3",
     "angular2-highcharts": "0.4.1",
     "ionic-angular": "2.0.0-rc.1",
-    "ionic-native": "2.2.3",
+    "ionic-native": "^2.2.3",
     "ionicons": "3.0.0",
     "rxjs": "5.0.0-beta.12",
     "zone.js": "0.6.21"
