--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "@angular/platform-browser": "2.4.8",
     "@angular/platform-browser-dynamic": "2.4.8",
     "@angular/platform-server": "2.4.8",
-    "@ionic-native/app-version": "^3.2.1",
+    "@ionic-native/app-version": "3.2.1",
     "@ionic-native/core": "3.1.0",
-    "@ionic-native/http": "^3.4.4",
-    "@ionic-native/sms": "^3.2.1",
-    "@ionic-native/splash-screen": "^3.1.0",
-    "@ionic-native/sqlite": "^3.2.1",
+    "@ionic-native/http": "3.4.4",
+    "@ionic-native/sms": "3.2.1",
+    "@ionic-native/splash-screen": "3.1.0",
+    "@ionic-native/sqlite": "3.2.1",
     "@ionic-native/status-bar": "3.1.0",
-    "@ionic/storage": "^2.0.0",
+    "@ionic/storage": "2.0.0",
     "angular2-highcharts": "0.4.1",
     "ionic-angular": "2.2.0",
     "ionicons": "3.0.0",
