--- a/package.json
+++ b/package.json
@@ -28,18 +28,19 @@
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/status-bar": "3.12.1",
         "@ionic/storage": "^2.0.1",
+        "cordova-android": "^6.2.3",
         "cordova-ios": "^4.4.0",
         "cordova-plugin-app-version": "^0.1.9",
         "cordova-plugin-background-mode": "^0.7.2",
         "cordova-plugin-compat": "^1.1.0",
-        "cordova-plugin-console": "^1.0.5",
-        "cordova-plugin-device": "^1.1.4",
+        "cordova-plugin-console": "^1.0.7",
+        "cordova-plugin-device": "^1.1.6",
         "cordova-plugin-file": "^4.3.3",
         "cordova-plugin-http": "^1.2.0",
         "cordova-plugin-network-information": "^1.3.3",
         "cordova-plugin-splashscreen": "^4.0.3",
-        "cordova-plugin-statusbar": "^2.2.2",
-        "cordova-plugin-whitelist": "^1.3.1",
+        "cordova-plugin-statusbar": "^2.2.3",
+        "cordova-plugin-whitelist": "^1.3.2",
         "cordova-sqlite-storage": "^2.0.4",
         "highcharts": "^5.0.14",
         "ionic-angular": "3.6.0",
@@ -72,6 +73,7 @@
             "ionic-plugin-keyboard": {}
         },
         "platforms": [
+            "android",
             "ios"
         ]
     }
