--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Specifies intentionally untracked files to ignore when using Git
 # http://git-scm.com/docs/gitignore
-
+package-lock.json
 *~
 *.sw[mnpcod]
 *.log
@@ -32,5 +32,3 @@ $RECYCLE.BIN/
 .DS_Store
 Thumbs.db
 UserInterfaceState.xcuserstate
-ctshisptzdevelopmenttypescriptdhis2touch
-res
