--- a/package.json
+++ b/package.json
@@ -31,30 +31,31 @@
         "@ionic-native/status-bar": "3.7.0",
         "@ionic/storage": "2.0.1",
         "angular2-highcharts": "0.4.1",
+        "cordova-android": "^6.2.1",
+        "cordova-plugin-android-permissions": "^0.11.0",
+        "cordova-plugin-app-version": "^0.1.9",
+        "cordova-plugin-compat": "^1.1.0",
+        "cordova-plugin-console": "^1.0.5",
+        "cordova-plugin-device": "^1.1.4",
+        "cordova-plugin-file": "^4.3.3",
+        "cordova-plugin-http": "^1.2.0",
+        "cordova-plugin-network-information": "^1.3.3",
+        "cordova-plugin-splashscreen": "^4.0.3",
+        "cordova-plugin-statusbar": "^2.2.2",
+        "cordova-plugin-whitelist": "^1.3.1",
+        "cordova-sms-plugin": "^0.1.11",
+        "cordova-sqlite-storage": "^2.0.4",
         "ionic-angular": "3.3.0",
+        "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
         "rxjs": "5.1.1",
         "sw-toolbox": "3.6.0",
-        "zone.js": "0.8.10",
-        "cordova-android": "~6.1.2",
-        "cordova-plugin-android-permissions": "~0.11.0",
-        "cordova-plugin-app-version": "~0.1.9",
-        "cordova-plugin-console": "1.0.5",
-        "cordova-plugin-device": "1.1.4",
-        "cordova-plugin-http": "~1.2.0",
-        "cordova-plugin-network-information": "~1.3.3",
-        "cordova-plugin-splashscreen": "~4.0.1",
-        "cordova-plugin-statusbar": "2.2.2",
-        "cordova-plugin-whitelist": "1.3.1",
-        "cordova-sms-plugin": "~0.1.11",
-        "cordova-sqlite-storage": "~2.0.4",
-        "ionic-plugin-keyboard": "~2.2.1",
-        "uk.co.workingedge.cordova.plugin.sqliteporter": "~0.1.4"
+        "uk.co.workingedge.cordova.plugin.sqliteporter": "^0.1.7",
+        "zone.js": "0.8.10"
     },
     "devDependencies": {
         "@ionic/app-scripts": "1.3.7",
-        "@ionic/cli-plugin-ionic-angular": "1.4.1",
-        "ionic": "3.8.1",
+        "ionic": "3.9.2",
         "typescript": "2.3.3"
     },
     "description": "An Ionic project",
