--- a/package.json
+++ b/package.json
@@ -12,43 +12,53 @@
         "ionic:serve": "ionic-app-scripts serve"
     },
     "dependencies": {
-        "@angular/common": "4.1.3",
-        "@angular/compiler": "4.1.3",
-        "@angular/compiler-cli": "4.1.3",
-        "@angular/core": "4.1.3",
-        "@angular/forms": "4.1.3",
-        "@angular/http": "4.1.3",
-        "@angular/platform-browser": "4.1.3",
-        "@angular/platform-browser-dynamic": "4.1.3",
-        "@ionic-native/app-version": "^4.1.0",
-        "@ionic-native/background-mode": "^4.1.0",
-        "@ionic-native/core": "3.12.1",
-        "@ionic-native/http": "^4.1.0",
-        "@ionic-native/network": "^4.1.0",
-        "@ionic-native/splash-screen": "3.12.1",
-        "@ionic-native/status-bar": "3.12.1",
-        "@ionic/storage": "^2.0.1",
-        "cordova-android": "^6.2.1",
-        "cordova-ios": "^4.4.0",
-        "cordova-plugin-app-version": "^0.1.9",
-        "cordova-plugin-background-mode": "^0.7.2",
-        "cordova-plugin-compat": "^1.1.0",
-        "cordova-plugin-console": "^1.0.7",
-        "cordova-plugin-device": "^1.1.6",
-        "cordova-plugin-file": "^4.3.3",
-        "cordova-plugin-http": "^1.2.0",
-        "cordova-plugin-network-information": "^1.3.3",
-        "cordova-plugin-splashscreen": "^4.0.3",
-        "cordova-plugin-statusbar": "^2.2.3",
-        "cordova-plugin-whitelist": "^1.3.2",
-        "cordova-sqlite-storage": "^2.0.4",
-        "highcharts": "^5.0.14",
-        "ionic-angular": "3.6.0",
-        "ionic-plugin-keyboard": "^2.2.1",
-        "ionicons": "3.0.0",
-        "rxjs": "5.4.0",
-        "sw-toolbox": "3.6.0",
-        "zone.js": "0.8.12"
+      "@angular/common": "4.1.3",
+      "@angular/compiler": "4.1.3",
+      "@angular/compiler-cli": "4.1.3",
+      "@angular/core": "4.1.3",
+      "@angular/forms": "4.1.3",
+      "@angular/http": "4.1.3",
+      "@angular/platform-browser": "4.1.3",
+      "@angular/platform-browser-dynamic": "4.1.3",
+      "@ionic-native/app-version": "^4.1.0",
+      "@ionic-native/background-mode": "^4.1.0",
+      "@ionic-native/core": "3.12.1",
+      "@ionic-native/http": "^4.1.0",
+      "@ionic-native/network": "^4.1.0",
+      "@ionic-native/splash-screen": "3.12.1",
+      "@ionic-native/status-bar": "3.12.1",
+      "@ionic/storage": "^2.0.1",
+      "@types/geojson": "^1.0.2",
+      "@types/html2canvas": "^0.5.34",
+      "@types/leaflet": "^1.0.67",
+      "@types/leaflet.markercluster": "^1.0.0",
+      "angular-file-saver": "^1.1.3",
+      "cordova-android": "^6.2.3",
+      "cordova-ios": "^4.4.0",
+      "cordova-plugin-app-version": "^0.1.9",
+      "cordova-plugin-background-mode": "^0.7.2",
+      "cordova-plugin-compat": "^1.1.0",
+      "cordova-plugin-console": "^1.0.7",
+      "cordova-plugin-device": "^1.1.6",
+      "cordova-plugin-file": "^4.3.3",
+      "cordova-plugin-http": "^1.2.0",
+      "cordova-plugin-network-information": "^1.3.3",
+      "cordova-plugin-splashscreen": "^4.0.3",
+      "cordova-plugin-statusbar": "^2.2.3",
+      "cordova-plugin-whitelist": "^1.3.2",
+      "cordova-sqlite-storage": "^2.0.4",
+      "file-saver": "^1.3.3",
+      "geojson-validation": "^0.1.6",
+      "highcharts": "^5.0.14",
+      "html2canvas": "^0.5.0-beta4",
+      "ionic-angular": "3.6.0",
+      "ionic-plugin-keyboard": "^2.2.1",
+      "ionicons": "3.0.0",
+      "leaflet": "^1.2.0",
+      "leaflet.markercluster": "^1.0.6",
+      "rxjs": "5.4.0",
+      "sw-toolbox": "3.6.0",
+      "zone.js": "0.8.12"
     },
     "devDependencies": {
         "@ionic/app-scripts": "2.1.3",
