--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@ionic-native/app-version": "^4.1.0",
     "@ionic-native/background-mode": "^4.1.0",
     "@ionic-native/core": "3.12.1",
-    "@ionic-native/http": "^4.1.0",
+    "@ionic-native/http": "4.1.0",
     "@ionic-native/network": "^4.1.0",
     "@ionic-native/sms": "^4.2.1",
     "@ionic-native/splash-screen": "3.12.1",
@@ -53,7 +53,7 @@
     "cordova-sqlite-storage": "^2.0.4",
     "file-saver": "^1.3.3",
     "geojson-validation": "^0.1.6",
-    "highcharts": "^5.0.14",
+    "highcharts": "5.0.14",
     "html2canvas": "^0.5.0-beta4",
     "ionic-angular": "3.6.0",
     "ionic-plugin-keyboard": "^2.2.1",
