--- a/package.json
+++ b/package.json
@@ -12,45 +12,42 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/common": "4.1.3",
-    "@angular/compiler": "4.1.3",
-    "@angular/compiler-cli": "4.1.3",
-    "@angular/core": "4.1.3",
-    "@angular/forms": "4.1.3",
-    "@angular/http": "4.1.3",
-    "@angular/platform-browser": "4.1.3",
-    "@angular/platform-browser-dynamic": "4.1.3",
+    "@angular/common": "4.4.3",
+    "@angular/compiler": "4.4.3",
+    "@angular/compiler-cli": "4.4.3",
+    "@angular/core": "4.4.3",
+    "@angular/forms": "4.4.3",
+    "@angular/http": "4.4.3",
+    "@angular/platform-browser": "4.4.3",
+    "@angular/platform-browser-dynamic": "4.4.3",
     "@ionic-native/app-version": "^4.1.0",
     "@ionic-native/background-mode": "^4.1.0",
-    "@ionic-native/core": "3.12.1",
-    "@ionic-native/http": "4.1.0",
+    "@ionic-native/core": "4.3.2",
+    "@ionic-native/http": "^4.4.2",
     "@ionic-native/network": "^4.1.0",
     "@ionic-native/sms": "^4.2.1",
-    "@ionic-native/splash-screen": "3.12.1",
+    "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/sqlite": "^4.1.0",
-    "@ionic-native/status-bar": "3.12.1",
-    "@ionic/storage": "^2.0.1",
+    "@ionic-native/status-bar": "4.3.2",
+    "@ionic/storage": "2.0.1",
     "@types/geojson": "^1.0.2",
     "@types/html2canvas": "^0.5.34",
     "@types/leaflet": "^1.0.67",
     "@types/leaflet.markercluster": "^1.0.0",
-    "angular-file-saver": "^1.1.3",
-    "cordova-android": "^6.3.0",
-    "cordova-ios": "^4.4.0",
-    "cordova-plugin-advanced-http": "^1.6.1",
+    "angular-file-saver": "1.1.3",
+    "cordova-android": "~6.3.0",
+    "cordova-plugin-advanced-http": "^1.9.0",
     "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-background-mode": "^0.7.2",
-    "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-console": "^1.1.0",
-    "cordova-plugin-device": "^1.1.6",
-    "cordova-plugin-file": "^4.3.3",
-    "cordova-plugin-http": "^1.2.0",
-    "cordova-plugin-network-information": "^1.3.3",
-    "cordova-plugin-splashscreen": "^4.0.3",
-    "cordova-plugin-statusbar": "^2.2.3",
-    "cordova-plugin-whitelist": "^1.3.2",
+    "cordova-plugin-device": "^1.1.7",
+    "cordova-plugin-file": "^5.0.0",
+    "cordova-plugin-network-information": "^1.3.4",
+    "cordova-plugin-splashscreen": "^4.1.0",
+    "cordova-plugin-statusbar": "^2.3.0",
+    "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sms-plugin": "^0.1.11",
-    "cordova-sqlite-storage": "^2.0.4",
+    "cordova-sqlite-storage": "^2.1.3",
     "file-saver": "^1.3.3",
     "geojson-validation": "^0.1.6",
     "highcharts": "5.0.14",
@@ -65,8 +62,7 @@
     "zone.js": "0.8.12"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "2.1.3",
-    "ionic": "3.16.0",
+    "@ionic/app-scripts": "3.0.1",
     "typescript": "2.3.4"
   },
   "description": "An Ionic project",
@@ -77,7 +73,6 @@
       "cordova-plugin-background-mode": {},
       "cordova-plugin-console": {},
       "cordova-plugin-device": {},
-      "cordova-plugin-http": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-whitelist": {},
