--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hisptz-touch",
+  "name": "dhis-2-touch",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
@@ -12,80 +12,85 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/common": "4.4.3",
-    "@angular/compiler": "4.4.3",
-    "@angular/compiler-cli": "4.4.3",
-    "@angular/core": "4.4.3",
-    "@angular/forms": "4.4.3",
-    "@angular/http": "4.4.3",
-    "@angular/platform-browser": "4.4.3",
-    "@angular/platform-browser-dynamic": "4.4.3",
-    "@ionic-native/app-version": "^4.1.0",
-    "@ionic-native/background-mode": "^4.1.0",
-    "@ionic-native/core": "4.3.2",
-    "@ionic-native/http": "^4.4.2",
-    "@ionic-native/network": "^4.1.0",
-    "@ionic-native/sms": "^4.2.1",
-    "@ionic-native/splash-screen": "4.3.2",
-    "@ionic-native/sqlite": "^4.1.0",
-    "@ionic-native/status-bar": "4.3.2",
-    "@ionic/storage": "2.0.1",
-    "@ngx-translate/core": "8.0.0",
-    "@ngx-translate/http-loader": "0.1.0",
-    "@types/geojson": "^1.0.2",
+    "@angular/common": "5.0.3",
+    "@angular/compiler": "5.0.3",
+    "@angular/compiler-cli": "5.0.3",
+    "@angular/core": "5.0.3",
+    "@angular/forms": "5.0.3",
+    "@angular/http": "5.0.3",
+    "@angular/platform-browser": "5.0.3",
+    "@angular/platform-browser-dynamic": "5.0.3",
+    "@ionic-native/app-version": "^4.5.2",
+    "@ionic-native/background-mode": "^4.5.2",
+    "@ionic-native/core": "4.4.0",
+    "@ionic-native/http": "^4.5.2",
+    "@ionic-native/keyboard": "^4.5.2",
+    "@ionic-native/network": "^4.5.2",
+    "@ionic-native/sms": "^4.5.2",
+    "@ionic-native/splash-screen": "4.4.0",
+    "@ionic-native/sqlite": "^4.5.2",
+    "@ionic-native/status-bar": "4.4.0",
+    "@ionic/storage": "^2.1.3",
+    "@ngx-translate/core": "^9.0.2",
+    "@ngx-translate/http-loader": "^0.1.0",
+    "@types/geojson": "1.0.2",
     "@types/html2canvas": "^0.5.34",
     "@types/leaflet": "^1.0.67",
     "@types/leaflet.markercluster": "^1.0.0",
     "angular-file-saver": "1.1.3",
     "cordova-android": "~6.3.0",
-    "cordova-plugin-advanced-http": "^1.9.0",
+    "cordova-plugin-advanced-http": "^1.9.1",
     "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-background-mode": "^0.7.2",
     "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-network-information": "^1.3.4",
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-statusbar": "^2.4.1",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sms-plugin": "^0.1.11",
-    "cordova-sqlite-storage": "^2.1.5",
+    "cordova-sqlite-storage": "^2.2.0",
     "file-saver": "^1.3.3",
-    "geojson-validation": "^0.1.6",
+    "geojson": "^0.5.0",
+    "geojson-validation": "0.1.6",
     "highcharts": "5.0.14",
     "html2canvas": "^0.5.0-beta4",
-    "ionic-angular": "3.6.0",
+    "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "leaflet": "^1.2.0",
     "leaflet.markercluster": "^1.0.6",
-    "rxjs": "5.4.0",
+    "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.12"
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.0.1",
-    "typescript": "2.3.4"
+    "@ionic/app-scripts": "3.1.5",
+    "@types/node": "^8.5.2",
+    "typescript": "2.4.2",
+    "typings": "^2.1.1"
   },
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
+      "cordova-sqlite-storage": {},
+      "cordova-sms-plugin": {},
       "cordova-plugin-network-information": {},
-      "cordova-plugin-app-version": {},
+      "cordova-plugin-advanced-http": {},
       "cordova-plugin-background-mode": {},
+      "cordova-plugin-app-version": {},
+      "ionic-plugin-keyboard": {},
       "cordova-plugin-console": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-whitelist": {},
-      "cordova-sqlite-storage": {},
-      "ionic-plugin-keyboard": {},
-      "cordova-sms-plugin": {},
-      "cordova-plugin-advanced-http": {}
+      "cordova-plugin-ionic-webview": {}
     },
     "platforms": [
-      "android",
-      "ios"
+      "android"
     ]
   }
 }
