--- a/package.json
+++ b/package.json
@@ -69,12 +69,13 @@
     "lodash": "^4.17.4",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
+    "typescript": "^2.6.2",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.5",
     "@types/node": "^8.5.2",
-    "typescript": "2.4.2",
+    "typescript": "^2.6.2",
     "typings": "^2.1.1"
   },
   "description": "An Ionic project",
