--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ionic-native/app-version": "^4.5.2",
     "@ionic-native/background-mode": "^4.5.2",
     "@ionic-native/core": "4.4.0",
+    "@ionic-native/diagnostic": "^4.5.3",
     "@ionic-native/http": "^4.5.2",
     "@ionic-native/keyboard": "^4.5.2",
     "@ionic-native/network": "^4.5.2",
@@ -55,6 +56,7 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sms-plugin": "^0.1.11",
     "cordova-sqlite-storage": "^2.2.0",
+    "cordova.plugins.diagnostic": "^3.9.2",
     "file-saver": "^1.3.3",
     "geojson": "^0.5.0",
     "geojson-validation": "0.1.6",
@@ -93,7 +95,8 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-whitelist": {},
-      "cordova-plugin-ionic-webview": {}
+      "cordova-plugin-ionic-webview": {},
+      "cordova.plugins.diagnostic": {}
     },
     "platforms": [
       "android"
