--- a/package.json
+++ b/package.json
@@ -32,12 +32,13 @@
     "@ionic-native/sqlite": "^4.5.2",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "^2.1.3",
+    "@mapbox/geojson-area": "^0.2.2",
     "@ngrx/effects": "^5.0.1",
     "@ngrx/store": "^5.0.0",
     "@ngrx/store-devtools": "^5.0.1",
     "@ngx-translate/core": "^9.0.2",
     "@ngx-translate/http-loader": "^0.1.0",
-    "@types/geojson": "1.0.2",
+    "@types/geojson": "^1.0.2",
     "@types/html2canvas": "^0.5.34",
     "@types/leaflet": "^1.0.67",
     "@types/leaflet.markercluster": "^1.0.0",
@@ -57,6 +58,10 @@
     "cordova-sms-plugin": "^0.1.11",
     "cordova-sqlite-storage": "^2.2.0",
     "cordova.plugins.diagnostic": "^3.9.2",
+    "d2-utilizr": "^0.2.15",
+    "d3-color": "^1.0.3",
+    "d3-scale": "^2.0.0",
+    "d3-time-format": "^2.1.1",
     "file-saver": "^1.3.3",
     "geojson": "^0.5.0",
     "geojson-validation": "0.1.6",
@@ -66,8 +71,9 @@
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
-    "leaflet": "^1.2.0",
-    "leaflet.markercluster": "^1.0.6",
+    "leaflet": "^1.3.1",
+    "leaflet.layergroup.collision": "^0.3.1",
+    "leaflet.markercluster": "^1.3.0",
     "lodash": "^4.17.4",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
