--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "leaflet.layergroup.collision": "^0.3.1",
     "leaflet.markercluster": "^1.3.0",
     "lodash": "^4.17.4",
+    "moment": "^2.20.1",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "typescript": "^2.6.2",
