--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
+    "@angular/animations": "^5.2.4",
     "@angular/common": "5.0.3",
     "@angular/compiler": "5.0.3",
     "@angular/compiler-cli": "5.0.3",
@@ -39,8 +40,9 @@
     "@ngx-translate/core": "^9.0.2",
     "@ngx-translate/http-loader": "^0.1.0",
     "@types/geojson": "^1.0.2",
+    "angular-tree-component": "^7.0.1",
     "cordova-android": "~6.3.0",
-    "cordova-plugin-advanced-http": "^1.9.1",
+    "cordova-plugin-advanced-http": "^1.10.0",
     "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-background-mode": "^0.7.2",
     "cordova-plugin-console": "^1.1.0",
@@ -72,9 +74,13 @@
     "leaflet.markercluster": "^1.3.0",
     "lodash": "^4.17.4",
     "moment": "^2.20.1",
+    "ng2-dnd": "^5.0.2",
+    "ng2-dragula": "^1.5.0",
+    "ngx-pagination": "^3.0.3",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "typescript": "^2.6.2",
+    "web-animations-js": "^2.3.1",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
