--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "cordova-plugin-statusbar": "^2.4.1",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sms-plugin": "^0.1.11",
-    "cordova-sqlite-storage": "^2.2.0",
+    "cordova-sqlite-storage": "2.2.0",
     "cordova.plugins.diagnostic": "^3.9.2",
     "d2-utilizr": "^0.2.15",
     "d3-color": "^1.0.3",
