--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "leaflet.layergroup.collision": "^0.3.1",
     "leaflet.markercluster": "^1.3.0",
     "lodash": "^4.17.4",
+    "md5-typescript": "^1.0.5",
     "moment": "^2.20.1",
     "ng2-dnd": "^5.0.2",
     "ng2-dragula": "^1.5.0",
