--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/geojson": "^1.0.2",
     "angular-tree-component": "^7.0.1",
     "cordova-android": "~6.3.0",
+    "cordova-ios": "4.5.4",
     "cordova-plugin-advanced-http": "^1.11.0",
     "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-console": "^1.1.0",
@@ -52,7 +53,7 @@
     "cordova-plugin-statusbar": "^2.4.1",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sms-plugin": "^0.1.11",
-    "cordova-sqlite-storage": "^2.2.0",
+    "cordova-sqlite-storage": "^2.2.1",
     "cordova.plugins.diagnostic": "^3.9.2",
     "d2-utilizr": "^0.2.15",
     "d3-color": "^1.0.3",
@@ -106,7 +107,8 @@
       "cordova.plugins.diagnostic": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
