--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "@ngx-translate/http-loader": "^0.1.0",
     "@types/geojson": "^1.0.2",
     "angular-tree-component": "^7.0.1",
-    "cordova-android": "~6.3.0",
-    "cordova-plugin-advanced-http": "^1.10.1",
+    "cordova-android": "6.3.0",
+    "cordova-plugin-advanced-http": "^1.11.0",
     "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-background-mode": "^0.7.2",
     "cordova-plugin-console": "^1.1.0",
@@ -54,7 +54,7 @@
     "cordova-plugin-statusbar": "^2.4.1",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sms-plugin": "^0.1.11",
-    "cordova-sqlite-storage": "2.2.0",
+    "cordova-sqlite-storage": "^2.2.0",
     "cordova.plugins.diagnostic": "^3.9.2",
     "d2-utilizr": "^0.2.15",
     "d3-color": "^1.0.3",
