--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "highcharts": "^6.0.4",
     "highcharts-grouped-categories": "^1.1.2",
     "html2canvas": "^0.5.0-beta4",
+    "ionic": "^3.20.0",
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
