--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@ionic-native/core": "4.5.3",
     "@ionic-native/date-picker": "^4.7.0",
     "@ionic-native/diagnostic": "^4.7.0",
+    "@ionic-native/file": "^4.7.0",
+    "@ionic-native/file-transfer": "^4.7.0",
     "@ionic-native/geolocation": "^4.7.0",
     "@ionic-native/http": "^4.7.0",
     "@ionic-native/keyboard": "^4.7.0",
@@ -55,6 +57,7 @@
     "cordova-plugin-datepicker": "^0.9.3",
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-network-information": "^1.3.4",
@@ -125,7 +128,9 @@
       "phonegap-plugin-barcodescanner": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
       },
-      "cordova-plugin-datepicker": {}
+      "cordova-plugin-datepicker": {},
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-file": {}
     },
     "platforms": [
       "android"
