Update config files as well as packages

--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,9 @@ log.txt
 *.sublime-workspace
 .vscode/
 npm-debug.log*
-*.md5
+
 .idea/
+.ionic/
 .sourcemaps/
 .sass-cache/
 .tmp/
@@ -22,7 +23,6 @@ dist/
 node_modules/
 tmp/
 temp/
-hooks/
 platforms/
 plugins/
 plugins/android.json
