--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "cordova-sms-plugin": "^0.1.13",
     "cordova-sqlite-storage": "^2.4.0",
     "cordova.plugins.diagnostic": "^4.0.10",
+    "cz-conventional-changelog": "^2.1.0",
     "d2-utilizr": "^0.2.15",
     "d3-color": "^1.0.3",
     "d3-scale": "^2.0.0",
@@ -91,6 +92,11 @@
     "sw-toolbox": "3.6.0",
     "web-animations-js": "^2.3.1",
     "zone.js": "0.8.26"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.11",
