--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@ionic-native/core": "~4.10.0",
     "@ionic-native/date-picker": "^4.10.1",
     "@ionic-native/diagnostic": "^4.10.1",
+    "@ionic-native/file": "^4.17.0",
+    "@ionic-native/file-transfer": "^4.17.0",
     "@ionic-native/geolocation": "^4.10.1",
     "@ionic-native/http": "^4.10.1",
     "@ionic-native/network": "^4.10.1",
@@ -54,6 +56,7 @@
     "cordova-plugin-datepicker": "^0.9.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.2.0",
@@ -130,7 +133,9 @@
       "cordova-sms-plugin": {},
       "cordova-plugin-background-mode": {},
       "cordova-plugin-console": {},
-      "cordova-plugin-statusbar": {}
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-file": {}
     },
     "platforms": [
       "android"
