--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "gis-api": "^25.0.4",
     "highcharts": "^6.0.4",
     "highcharts-grouped-categories": "^1.1.2",
+    "ionic": "^4.5.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "js-sha1": "^0.6.0",
