--- a/package.json
+++ b/package.json
@@ -51,24 +51,24 @@
     "async": "^2.6.1",
     "cordova-android": "7.0.0",
     "cordova-ios": "4.5.4",
-    "cordova-plugin-advanced-http": "^1.11.1",
-    "cordova-plugin-app-version": "^0.1.9",
-    "cordova-plugin-background-mode": "^0.7.2",
-    "cordova-plugin-console": "^1.1.0",
-    "cordova-plugin-datepicker": "^0.9.3",
-    "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-file": "^6.0.1",
-    "cordova-plugin-file-transfer": "^1.7.1",
-    "cordova-plugin-geolocation": "^4.0.1",
+    "cordova-plugin-advanced-http": "1.11.1",
+    "cordova-plugin-app-version": "0.1.9",
+    "cordova-plugin-background-mode": "0.7.2",
+    "cordova-plugin-console": "1.1.0",
+    "cordova-plugin-datepicker": "0.9.3",
+    "cordova-plugin-device": "2.0.2",
+    "cordova-plugin-file": "6.0.1",
+    "cordova-plugin-file-transfer": "1.7.1",
+    "cordova-plugin-geolocation": "4.0.1",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^2.2.5",
-    "cordova-plugin-network-information": "^2.0.1",
-    "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-sms-plugin": "^0.1.13",
-    "cordova-sqlite-storage": "^2.5.2",
-    "cordova.plugins.diagnostic": "^4.0.10",
+    "cordova-plugin-ionic-webview": "^2.3.3",
+    "cordova-plugin-network-information": "2.0.1",
+    "cordova-plugin-splashscreen": "5.0.2",
+    "cordova-plugin-statusbar": "2.4.2",
+    "cordova-plugin-whitelist": "1.3.3",
+    "cordova-sms-plugin": "0.1.13",
+    "cordova-sqlite-storage": "2.6.0",
+    "cordova.plugins.diagnostic": "4.0.11",
     "cz-conventional-changelog": "^2.1.0",
     "d2-utilizr": "^0.2.15",
     "d3-color": "^1.0.3",
@@ -91,7 +91,7 @@
     "ng2-dnd": "^5.0.2",
     "ng2-dragula": "^1.5.0",
     "ngx-pagination": "^3.0.3",
-    "phonegap-plugin-barcodescanner": "^8.0.1",
+    "phonegap-plugin-barcodescanner": "8.0.1",
     "polylabel": "^1.0.2",
     "rxjs": "5.5.11",
     "shp-write": "^0.3.2",
