--- a/package.json
+++ b/package.json
@@ -48,25 +48,27 @@
     "angular-tree-component": "^7.0.1",
     "angular2-virtual-scroll": "^0.3.2",
     "async": "^2.6.1",
-    "cordova-android": "7.0.0",
+    "cordova-android": "6.3.0",
+    "cordova-android-support-gradle-release": "^3.0.1",
     "cordova-ios": "4.5.4",
-    "cordova-plugin-advanced-http": "1.11.1",
-    "cordova-plugin-app-version": "0.1.9",
-    "cordova-plugin-background-mode": "0.7.2",
-    "cordova-plugin-console": "1.1.0",
-    "cordova-plugin-datepicker": "0.9.3",
-    "cordova-plugin-device": "2.0.3",
-    "cordova-plugin-file": "6.0.2",
-    "cordova-plugin-file-transfer": "1.7.1",
-    "cordova-plugin-geolocation": "4.0.2",
+    "cordova-plugin-advanced-http": "^1.11.1",
+    "cordova-plugin-app-version": "^0.1.9",
+    "cordova-plugin-background-mode": "^0.7.2",
+    "cordova-plugin-compat": "^1.2.0",
+    "cordova-plugin-console": "^1.1.0",
+    "cordova-plugin-datepicker": "^0.9.3",
+    "cordova-plugin-device": "^2.0.3",
+    "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-file-transfer": "^1.7.1",
+    "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.5.1",
-    "cordova-plugin-network-information": "2.0.2",
-    "cordova-plugin-splashscreen": "5.0.3",
-    "cordova-plugin-statusbar": "2.4.3",
-    "cordova-plugin-whitelist": "1.3.4",
-    "cordova-sqlite-storage": "2.6.0",
-    "cordova.plugins.diagnostic": "4.0.12",
+    "cordova-plugin-network-information": "^2.0.2",
+    "cordova-plugin-splashscreen": "^5.0.3",
+    "cordova-plugin-statusbar": "^2.4.3",
+    "cordova-plugin-whitelist": "^1.3.4",
+    "cordova-sqlite-storage": "^2.6.0",
+    "cordova.plugins.diagnostic": "^4.0.12",
     "cz-conventional-changelog": "^2.1.0",
     "d2-utilizr": "^0.2.15",
     "d3-color": "^1.0.3",
@@ -89,7 +91,7 @@
     "ng2-dnd": "^5.0.2",
     "ng2-dragula": "^1.5.0",
     "ngx-pagination": "^3.0.3",
-    "phonegap-plugin-barcodescanner": "8.1.0",
+    "phonegap-plugin-barcodescanner": "^8.1.0",
     "polylabel": "^1.0.2",
     "rxjs": "5.5.11",
     "shp-write": "^0.3.2",
@@ -135,11 +137,15 @@
       "cordova-plugin-console": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-file-transfer": {},
-      "cordova-plugin-file": {}
+      "cordova-plugin-file": {},
+      "cordova-plugin-compat": {},
+      "cordova-android-support-gradle-release": {
+        "ANDROID_SUPPORT_VERSION": "27.+"
+      }
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
