--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "cordova-plugin-splashscreen": "5.0.3",
     "cordova-plugin-statusbar": "2.4.3",
     "cordova-plugin-whitelist": "1.3.4",
-    "cordova-sqlite-storage": "2.6.0",
+    "cordova-sqlite-storage": "^3.4.0",
     "cordova.plugins.diagnostic": "4.0.12",
     "cz-conventional-changelog": "^2.1.0",
     "d2-utilizr": "^0.2.15",
