--- a/package.json
+++ b/package.json
@@ -60,13 +60,13 @@
     "cordova-plugin-file": "6.0.2",
     "cordova-plugin-file-transfer": "1.7.1",
     "cordova-plugin-geolocation": "4.0.2",
-    "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^2.5.1",
+    "cordova-plugin-ionic-keyboard": "^2.2.0",
+    "cordova-plugin-ionic-webview": "^2.5.3",
     "cordova-plugin-network-information": "2.0.2",
     "cordova-plugin-splashscreen": "5.0.3",
     "cordova-plugin-statusbar": "2.4.3",
     "cordova-plugin-whitelist": "1.3.4",
-    "cordova-sqlite-storage": "^3.4.0",
+    "cordova-sqlite-storage": "3.4.1",
     "cordova.plugins.diagnostic": "4.0.12",
     "cz-conventional-changelog": "^2.1.0",
     "d2-utilizr": "^0.2.15",
