refactor(app): configurations for updated version of angular

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,11 @@ sudo: false
 branches:
   only:
     - master
-    - develop-v3
-    - stable-mobile-dev
+    - develop
 language: node_js
 
 node_js:
-  - '8'
+  - '10'
 
 addons:
   apt:
