--- a/package.json
+++ b/package.json
@@ -1,139 +1,138 @@
 {
-  "name": "dhis-2-touch",
-  "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "compodoc": "npx compodoc -p src/tsconfig.app.json -n \"DHIS 2 Touch\" -n \"DHIS 2 Touch\"  --hideGenerator --theme material -d ./docs",
-    "compodoc-run": "npx compodoc -p src/tsconfig.app.json -s -w -n \"DHIS 2 Touch\" --hideGenerator --theme material -d ./docs"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/common": "^7.2.2",
-    "@angular/core": "^7.2.2",
-    "@angular/forms": "^7.2.2",
-    "@angular/http": "^7.2.2",
-    "@angular/platform-browser": "^7.2.2",
-    "@angular/platform-browser-dynamic": "^7.2.2",
-    "@angular/router": "^7.2.2",
-    "@ionic-native/background-mode": "^5.5.1",
-    "@ionic-native/barcode-scanner": "^5.5.1",
-    "@ionic-native/core": "^5.0.0",
-    "@ionic-native/date-picker": "^5.12.0",
-    "@ionic-native/diagnostic": "^5.5.1",
-    "@ionic-native/geolocation": "^5.12.0",
-    "@ionic-native/http": "^5.6.0",
-    "@ionic-native/network": "^5.6.0",
-    "@ionic-native/splash-screen": "^5.0.0",
-    "@ionic-native/sqlite": "^5.3.0",
-    "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^4.0.0",
-    "@ionic/pro": "2.0.4",
-    "@ionic/storage": "^2.2.0",
-    "@ngrx/core": "^1.2.0",
-    "@ngrx/effects": "^7.4.0",
-    "@ngrx/entity": "^7.4.0",
-    "@ngrx/router-store": "^7.4.0",
-    "@ngrx/store": "^7.4.0",
-    "@ngx-translate/core": "^11.0.1",
-    "@ngx-translate/http-loader": "^4.0.0",
-    "async": "^2.6.2",
-    "commitizen": "^2.10.1",
-    "cordova-android": "7.1.4",
-    "cordova-plugin-advanced-http": "^2.1.1",
-    "cordova-plugin-background-mode": "^0.7.3",
-    "cordova-plugin-datepicker": "^0.9.3",
-    "cordova-plugin-device": "^2.0.3",
-    "cordova-plugin-file": "^6.0.2",
-    "cordova-plugin-geolocation": "^4.0.2",
-    "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^3.1.2",
-    "cordova-plugin-network-information": "^2.0.2",
-    "cordova-plugin-splashscreen": "^5.0.3",
-    "cordova-plugin-statusbar": "^2.4.3",
-    "cordova-plugin-whitelist": "^1.3.4",
-    "cordova-sqlite-storage": "^3.3.0",
-    "cordova.plugins.diagnostic": "^4.0.12",
-    "core-js": "^2.5.4",
-    "cz-conventional-changelog": "^2.1.0",
-    "js-sha1": "^0.6.0",
-    "leaflet": "^1.5.1",
-    "lodash": "^4.17.13",
-    "moment": "^2.24.0",
-    "phonegap-plugin-barcodescanner": "^8.1.0",
-    "rxjs": "~6.3.3",
-    "typeorm": "^0.2.0",
-    "zone.js": "~0.8.29"
-  },
-  "devDependencies": {
-    "@angular-devkit/architect": "~0.12.3",
-    "@angular-devkit/build-angular": "~0.12.3",
-    "@angular-devkit/core": "~7.2.3",
-    "@angular-devkit/schematics": "~7.2.3",
-    "@angular/cli": "~7.2.3",
-    "@angular/compiler": "~7.2.2",
-    "@angular/compiler-cli": "~7.2.2",
-    "@angular/language-service": "~7.2.2",
-    "@compodoc/compodoc": "^1.1.9",
-    "@ionic/angular-toolkit": "~1.4.0",
-    "@ionic/lab": "1.0.23",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^8.0.31",
-    "codelyzer": "~4.5.0",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.4",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
-    "sql.js": "^0.5.0",
-    "ts-node": "~8.0.0",
-    "tslint": "~5.12.0",
-    "typescript": "~3.1.6"
-  },
-  "description": "An Ionic project",
-  "config": {
-    "ionic_webpack": "./configs/webpack.config.js",
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
-  },
-  "cordova": {
-    "plugins": {
-      "cordova-sqlite-storage": {},
-      "cordova-plugin-whitelist": {},
-      "cordova-plugin-statusbar": {},
-      "cordova-plugin-device": {},
-      "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {
-        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
-      },
-      "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-background-mode": {},
-      "phonegap-plugin-barcodescanner": {
-        "ANDROID_SUPPORT_V4_VERSION": "27.+"
-      },
-      "cordova.plugins.diagnostic": {
-        "ANDROID_SUPPORT_VERSION": "27.+"
-      },
-      "cordova-plugin-advanced-http": {
-        "OKHTTP_VERSION": "3.10.0"
-      },
-      "cordova-plugin-network-information": {},
-      "cordova-plugin-datepicker": {},
-      "cordova-plugin-geolocation": {}
+    "name": "dhis-2-touch",
+    "version": "0.0.1",
+    "author": "Ionic Framework",
+    "homepage": "https://ionicframework.com/",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build",
+        "test": "ng test",
+        "lint": "ng lint",
+        "e2e": "ng e2e",
+        "postinstall": "bash ./scripts/patch.sh",
+        "compodoc": "npx compodoc -p ./tsconfig.app.json -n \"DHIS 2 Touch\" -n \"DHIS 2 Touch\"  --hideGenerator --theme material -d ./docs",
+        "compodoc-run": "npx compodoc -p ./tsconfig.app.json -s -w -n \"DHIS 2 Touch\" --hideGenerator --theme material -d ./docs"
     },
-    "platforms": [
-      "android"
-    ]
-  }
+    "private": true,
+    "dependencies": {
+        "@angular/common": "~8.1.2",
+        "@angular/core": "~8.1.2",
+        "@angular/forms": "~8.1.2",
+        "@angular/platform-browser": "~8.1.2",
+        "@angular/platform-browser-dynamic": "~8.1.2",
+        "@angular/router": "~8.1.2",
+        "@ionic-native/background-mode": "^5.16.0",
+        "@ionic-native/barcode-scanner": "^5.16.0",
+        "@ionic-native/core": "^5.0.0",
+        "@ionic-native/date-picker": "^5.16.0",
+        "@ionic-native/diagnostic": "^5.16.0",
+        "@ionic-native/geolocation": "^5.16.0",
+        "@ionic-native/http": "^5.16.0",
+        "@ionic-native/network": "^5.16.0",
+        "@ionic-native/splash-screen": "^5.0.0",
+        "@ionic-native/sqlite": "^5.16.0",
+        "@ionic-native/status-bar": "^5.0.0",
+        "@ionic/angular": "^4.7.1",
+        "@ionic/storage": "^2.2.0",
+        "@ngrx/effects": "^8.5.1",
+        "@ngrx/entity": "^8.5.1",
+        "@ngrx/store": "^8.5.1",
+        "@ngx-translate/core": "^11.0.1",
+        "@ngx-translate/http-loader": "^4.0.0",
+        "async": "^3.1.0",
+        "commitizen": "^4.0.3",
+        "cordova-android": "7.1.4",
+        "cordova-plugin-advanced-http": "^2.3.0",
+        "cordova-plugin-background-mode": "^0.7.3",
+        "cordova-plugin-datepicker": "^0.9.3",
+        "cordova-plugin-device": "^2.0.3",
+        "cordova-plugin-file": "^6.0.2",
+        "cordova-plugin-geolocation": "^4.0.2",
+        "cordova-plugin-ionic-keyboard": "^2.2.0",
+        "cordova-plugin-ionic-webview": "^4.1.3",
+        "cordova-plugin-network-information": "^2.0.2",
+        "cordova-plugin-splashscreen": "^5.0.3",
+        "cordova-plugin-statusbar": "^2.4.3",
+        "cordova-plugin-whitelist": "^1.3.4",
+        "cordova-sqlite-storage": "^3.4.1",
+        "cordova.plugins.diagnostic": "^5.0.1",
+        "core-js": "^2.5.4",
+        "cz-conventional-changelog": "^3.0.2",
+        "js-sha1": "^0.6.0",
+        "leaflet": "^1.5.1",
+        "lodash": "^4.17.15",
+        "moment": "^2.24.0",
+        "phonegap-plugin-barcodescanner": "^8.1.0",
+        "rxjs": "~6.5.1",
+        "sql.js": "^1.0.1",
+        "sqlite3": "^4.0.9",
+        "stream": "0.0.2",
+        "tslib": "^1.9.0",
+        "typeorm": "^0.2.18",
+        "zone.js": "~0.9.1"
+    },
+    "devDependencies": {
+        "@angular-builders/custom-webpack": "^8.2.0",
+        "@angular-devkit/architect": "~0.801.2",
+        "@angular-devkit/build-angular": "~0.801.2",
+        "@angular-devkit/core": "~8.1.2",
+        "@angular-devkit/schematics": "~8.1.2",
+        "@angular/cli": "~8.1.2",
+        "@angular/compiler": "~8.1.2",
+        "@angular/compiler-cli": "~8.1.2",
+        "@angular/language-service": "~8.1.2",
+        "@compodoc/compodoc": "^1.1.11",
+        "@ionic/angular-toolkit": "~2.0.0",
+        "@types/jasmine": "~3.3.8",
+        "@types/jasminewd2": "~2.0.3",
+        "@types/node": "^8.9.5",
+        "codelyzer": "^5.0.0",
+        "jasmine-core": "~3.4.0",
+        "jasmine-spec-reporter": "~4.2.1",
+        "karma": "~4.1.0",
+        "karma-chrome-launcher": "~2.2.0",
+        "karma-coverage-istanbul-reporter": "~2.0.1",
+        "karma-jasmine": "~2.0.1",
+        "karma-jasmine-html-reporter": "^1.4.0",
+        "protractor": "~5.4.0",
+        "ts-node": "^7.0.1",
+        "tslint": "~5.15.0",
+        "typescript": "~3.4.3"
+    },
+    "description": "An Ionic project",
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog"
+        }
+    },
+    "cordova": {
+        "plugins": {
+            "cordova-plugin-whitelist": {},
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-ionic-webview": {
+                "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+            },
+            "cordova-plugin-ionic-keyboard": {},
+            "cordova-plugin-geolocation": {},
+            "cordova-plugin-network-information": {},
+            "cordova-plugin-advanced-http": {
+                "OKHTTP_VERSION": "3.10.0"
+            },
+            "cordova-plugin-background-mode": {},
+            "phonegap-plugin-barcodescanner": {
+                "ANDROID_SUPPORT_V4_VERSION": "27.+"
+            },
+            "cordova-plugin-datepicker": {},
+            "cordova-sqlite-storage": {},
+            "cordova.plugins.diagnostic": {
+                "ANDROID_SUPPORT_VERSION": "27.+"
+            }
+        },
+        "platforms": [
+            "android"
+        ]
+    }
 }
